Folder restructuring for project.

--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,5 @@
 <div style="padding-left:130px;padding-right:200px;">
-<h1>About us page.</h1>
+<h1>About us page 123.</h1>
  <p>This is simple angular ng-view and ng-route tutorial to demonstrate single page web app development.</p>
  <p>
    This is executed because of this code.
@@ -11,5 +11,5 @@
      </code>
    </pre>
  </p>
- <p><a class="btn btn-primary btn-lg" href="#" role="button">Read tutorial</a></p>
+ <p><a class="btn btn-primary btn-lg" href="#" role="button">Read tutorial 123</a></p>
  </div>
