--- a/app/views/pages/login.html
+++ b/app/views/pages/login.html
@@ -1,30 +1,21 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Please Sign In</h3>
-                </div>
-                <div class="panel-body">
-                    <form role="form">
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password" value="">
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input name="remember" type="checkbox" value="Remember Me">Remember Me
-                                </label>
-                            </div>
-                            <!-- Change this to a button or input when using this as a form -->
-                            <a ui-sref="dashboard.home" class="btn btn-lg btn-success btn-block">Login</a>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+	<div class="form">
+		 <div id="signup">   
+			 <h1>Welcome Back!</h1>
+			 <form action="/" method="post">
+			 <div class="field-wrap">
+				<label>
+				  Email Address<span class="req">*</span>
+				</label>
+				<input type="email"required autocomplete="off"/>
+			  </div>
+			  <div class="field-wrap">
+				<label>
+				  Password<span class="req">*</span>
+				</label>
+				<input type="password"required autocomplete="off"/>
+			  </div>
+			  <p class="forgot"><a href="#">Forgot Password?</a></p>
+			  <input type="submit" class="button button-block" value="Log IN"/>
+			  </form>
+		</div>
+	</div>
