--- a/app/views/pages/login.html
+++ b/app/views/pages/login.html
@@ -1,21 +1,16 @@
-	<div class="form">
-		 <div id="signup">   
-			 <h1>Welcome Back!</h1>
-			 <form action="/" method="post">
-			 <div class="field-wrap">
-				<label>
-				  Email Address<span class="req">*</span>
-				</label>
-				<input type="email"required autocomplete="off"/>
-			  </div>
-			  <div class="field-wrap">
-				<label>
-				  Password<span class="req">*</span>
-				</label>
-				<input type="password"required autocomplete="off"/>
-			  </div>
-			  <p class="forgot"><a href="#">Forgot Password?</a></p>
-			  <input type="submit" class="button button-block" value="Log IN"/>
-			  </form>
-		</div>
-	</div>
+<div class="form">
+   <div id="signup">
+      <h1>Welcome Back!</h1>
+      <form action="/" method="post">
+         <div class="field-wrap">
+            <input type="email"required autocomplete="off" placeholder="E-mail"/>
+         </div>
+         <div class="field-wrap">
+            <input type="password"required autocomplete="off" placeholder="Password"/>
+         </div>
+         <span class="forgot"><a href ="#sign-up">Sign up</a></span>
+         <p class="forgot"><a href="#forgotpassword">Forgot Password?</a></p>
+         <input type="submit" class="button button-block" value="Log IN"/>
+      </form>
+   </div>
+</div>
