--- a/app/views/pages/forgotpassword.html
+++ b/app/views/pages/forgotpassword.html
@@ -1,8 +1,11 @@
 <div class="form">
    <div id="signup">
+       <form action="/" name="forgotForm" method="post" ng-submit="forgotData(user)">
       <div class="field-wrap">
-         <input type="email"required autocomplete="off" placeholder="Registered E-mail"/>
+         <input type="email"required autocomplete="off" placeholder="Registered E-mail"  ng-model="user.registeredEmail "name="registeredEmail"  ng-class="{'box-boder': forgotForm.registeredEmail.$invalid}" required/>
+         <p class="validat-text-clr" ng-show="forgotForm.registeredEmail.$touched && forgotForm.registeredEmail.$invalid">Please Enter  Your Registered  E-mail</p>
       </div>
    </div>
-   <input type="submit" class="button button-block" value="Submit"/>
+   <input type="submit" class="button btn" ng-disabled="forgotForm.$invalid" value="Submit"/>
+   </form>
 </div>
