--- a/app/views/pages/login.html
+++ b/app/views/pages/login.html
@@ -1,16 +1,22 @@
 <div class="form">
    <div id="signup">
       <h1>Welcome Back!</h1>
-      <form action="/" method="post">
+      <form action="/" name="loginForm" method="post" ng-submit="sendLoginData(user)">
          <div class="field-wrap">
-            <input type="email"required autocomplete="off" placeholder="E-mail"/>
+
+             
+            <input type="email" required autocomplete="off" name="userEmail" ng-model="user.name" placeholder="E-mail" required ng-class="{'box-boder': loginForm.userEmail.$invalid}"/>
+            <p class="validat-text-clr" ng-show="loginForm.userEmail.$touched && loginForm.userEmail.$invalid">Please Enter  Your E-mail</p>
          </div>
          <div class="field-wrap">
-            <input type="password"required autocomplete="off" placeholder="Password"/>
+            <input type="password"required autocomplete="off" name="userPassword" ng-model="user.password" placeholder="Password" required ng-class="{'box-boder': loginForm.userPassword.$invalid}"/>
+            <p class="validat-text-clr" ng-show="loginForm.userPassword.$touched  && loginForm.userPassword.$invalid">Please Enter Your Password</p>
          </div>
          <span class="forgot"><a href ="#sign-up">Sign up</a></span>
          <p class="forgot"><a href="#forgotpassword">Forgot Password?</a></p>
-         <input type="submit" class="button button-block" value="Log IN"/>
+         <input type="submit" class="button btn" ng-disabled="loginForm.$invalid" value="Log IN"/>
       </form>
    </div>
 </div>
+<!--my login form-->
+
