--- a/app/views/pages/login.html
+++ b/app/views/pages/login.html
@@ -12,8 +12,8 @@
             <input type="password"required autocomplete="off" name="userPassword" ng-model="user.password" placeholder="Password" required ng-class="{'box-boder': loginForm.userPassword.$invalid}"/>
             <p class="validat-text-clr" ng-show="loginForm.userPassword.$touched  && loginForm.userPassword.$invalid">Please Enter Your Password</p>
          </div>
-         <span class="forgot"><a href ="#sign-up">Sign up</a></span>
-         <p class="forgot"><a href="#forgotpassword">Forgot Password?</a></p>
+         <span class="forgot"><a href ="#!sign-up">Sign up</a></span>
+         <p class="forgot"><a href="#!forgotpassword">Forgot Password?</a></p>
          <input type="submit" class="button btn" ng-disabled="loginForm.$invalid" value="Log IN"/>
       </form>
    </div>
