--- a/app/views/pages/login.html
+++ b/app/views/pages/login.html
@@ -3,13 +3,11 @@
       <h1>Welcome Back!</h1>
       <form action="/" name="loginForm" method="post" ng-submit="sendLoginData(user)">
          <div class="field-wrap">
-
-             
-            <input type="email" required autocomplete="off" name="userEmail" ng-model="user.name" placeholder="E-mail" required ng-class="{'box-boder': loginForm.userEmail.$invalid}"/>
+            <input type="email" required autocomplete="off" name="userEmail" ng-blur="blur=true" ng-model="user.name" placeholder="E-mail" required ng-class="{myBlur:blur}"/>
             <p class="validat-text-clr" ng-show="loginForm.userEmail.$touched && loginForm.userEmail.$invalid">Please Enter  Your E-mail</p>
          </div>
          <div class="field-wrap">
-            <input type="password"required autocomplete="off" name="userPassword" ng-model="user.password" placeholder="Password" required ng-class="{'box-boder': loginForm.userPassword.$invalid}"/>
+            <input type="password"required autocomplete="off" ng-blur="blur=true" name="userPassword" ng-model="user.password" placeholder="Password" required ng-class="{myBlur:blur}"/>
             <p class="validat-text-clr" ng-show="loginForm.userPassword.$touched  && loginForm.userPassword.$invalid">Please Enter Your Password</p>
          </div>
          <span class="forgot"><a href ="#!sign-up">Sign up</a></span>
