header color change and in left menu bar add image icon

--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -74,6 +74,9 @@ font-weight:bold;
   border-bottom:1px solid gray;
   margin-top:5px;
 }
-.spcl-txt-color{
+.spcl-txt-color{                  /*for text color */
   color:red;
+}
+.hdr-color{
+  background:black;
 }
