latest changes done.

--- a/app/views/pages/transaction.html
+++ b/app/views/pages/transaction.html
@@ -39,6 +39,6 @@
        <hr class="line-color">
     </div>
 	<div>
-		<ui-custom-grid options="vm.firstOptions" class="grid"></ui-grid>
+		<ui-custom-grid options="vm.firstOptions" class="grid"></ui-custom-grid>
 	</div>
 </div>
