--- a/app/views/dashboard/main.html
+++ b/app/views/dashboard/main.html
@@ -1,16 +1,13 @@
-<div id="wrapper">
-
-        <!-- Navigation -->
-            
+	<div id="wrapper">
+        <!-- Navigation -->            
         <header></header>
         <!-- /.navbar-top-links -->
-        
-               
         <!-- /.navbar-static-side -->
-
             <div id="page-wrapper" style="min-height: 561px;">
 
-                <div ui-view></div>
+                <div ui-view>
+				
+				</div>
                 
             </div>
             <!-- /#page-wrapper -->
