--- a/app/views/transaction.html
+++ b/app/views/transaction.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="TransactionController as vm">
+<div class="container-fluid" ng-controller="TransacCtrl as vm">
    <div class="row mtxl">
       <div class="col-md-12 col-sm-12 col-xs-12 text-size">
          <strong>TRANSACTION TO BE VERIFIED-LAST 7 DAYS</strong>
