--- a/app/views/daily-tasks.html
+++ b/app/views/daily-tasks.html
@@ -1,44 +1,23 @@
 <div class="container-fluid" ng-controller="DailyTasksCtrl as vm">
    <div class="row mtxl">
       <div class="col-md-12 col-sm-12 col-xs-12 text-size">
-         <strong>Daily TasksTRANSACTION TO BE VERIFIED-LAST 7 DAYS</strong>
+         <strong>DAILY TASKS</strong>
          <hr class="line-color">
       </div>
    </div>  
    
-   <div  class="mtl">
-      <strong class="text-size">PURCHASE VIA</strong>
-        <span>
-            <button type="button" class="btn btn-danger btn-xs">Credits</button>
-        </span>
-   </div>
-   <div class="row-border">
-      <strong>No Transaction To Be verified</strong>
-   </div>
-   <div  class="mtl">
-      <strong class="text-size">PURCHASE VIA</strong>
-          <span>
-              <button type="button" class="btn btn-primary btn-xs">Subscription</button>
-          </span>
-   </div>
-   <div class="row-border">
-      <strong>No Transaction To Be verified</strong>
-   </div>
-   <div  class="mtl">
-      <strong class="text-size">PURCHASE VIA</strong>
-          <span>
-              <button type="button" class="btn btn-info btn-xs">Download Pack</button>
-          </span>
-   </div>
-   <div class="row-border">
-      <strong>No Transaction To Be verified</strong>
-   </div>
-    <div class="mtl text-size">TODAY'S TRANSACTION 
-       <span class="mls spcl-txt-color">(TRANSACTION  SHOWN ARE LIMITED TO YOUR TERRITORIES)
-       </span>
+      <div class="mtl text-size">AUTO RENEWAL DISABLED ON JUNE 2, 2016. 
+      
        <hr class="line-color">
     </div>
 	<div>
 		<ui-custom-grid options="vm.firstOptions" class="grid"></ui-custom-grid>
+	</div>
+    <div class="mtl text-size">SUBSCRIPTION WILL BE EXPIRING 10 DAYS AFTER June 2, 2016.
+       
+       <hr class="line-color">
+    </div>
+	<div>
+		<ui-custom-grid options="vm.secondOptions" class="grid"></ui-custom-grid>
 	</div>
 </div>
