search client information.

--- a/app/views/pages/login.html
+++ b/app/views/pages/login.html
@@ -1,4 +1,4 @@
-<div class="form" ng-controller="LoginController as vm">
+<div class="form" ng-controller="LoginCtrl as vm">
    <div id="signup">
       <h1 class="login-h1">Welcome Back!</h1>
       <form name="loginForm" method="post" ng-submit="vm.login()" role="form">
