--- a/app/views/searchClientInformation.html
+++ b/app/views/searchClientInformation.html
@@ -1,11 +1,11 @@
-<div class="container-fluid" ng-controller="AdvancedMemberSearchCtrl as vm">
+<div class="container-fluid" ng-controller="SearchClientInformationCtrl as vm">
 	<div class="row mtxl">
       <div class="col-md-12 col-sm-12 col-xs- text-size">
 		 <div class="row">
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						Advance Member Search
+						Search Client Information
 					</div>
 					<div class="panel-body">
 						<div class="row">
