font size changes all over the application.

--- a/app/views/transaction.html
+++ b/app/views/transaction.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" ng-controller="TransacCtrl as vm">
    <div class="row mtxl">
-      <div class="col-md-12 col-sm-12 col-xs-12 text-size">
+      <div class="col-md-12 col-sm-12 col-xs-12">
          <strong>TRANSACTION TO BE VERIFIED-LAST 7 DAYS</strong>
          <hr class="line-color">
       </div>
