--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,7 @@
 /* Space out content a bit */
 body {
     padding-bottom: 20px;
+	font-size:13px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
