--- a/app/views/daily-tasks.html
+++ b/app/views/daily-tasks.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" ng-controller="DailyTasksCtrl as vm">
    <div class="row mtxl">
-      <div class="col-md-12 col-sm-12 col-xs-12 text-size">
+      <div class="col-md-12 col-sm-12 col-xs-12">
          <strong>DAILY TASKS</strong>
          <hr class="line-color">
       </div>
