--- a/app/views/transaction.html
+++ b/app/views/transaction.html
@@ -38,7 +38,7 @@
        </span>
        <hr class="line-color">
     </div>
-  <div>
+  <div ng-if="vm.gridOptions">
     <ui-custom-grid options="vm.gridOptions" class="grid"></ui-custom-grid>
   </div>
 </div>
