--- a/app/views/searchClientInformation.html
+++ b/app/views/searchClientInformation.html
@@ -45,7 +45,7 @@
 											<label>State</label>
 											<input class="form-control" placeholder="Enter text">
 										</div>
-										<button type="submit" class="btn btn-danger">Search</button>
+										<button type="submit" class="btn btn-danger" ng-click="vm.test()">Search</button>
 										<button type="reset" class="btn btn-danger">Reset</button>
 								</div>
 								<!-- /.col-lg-6 (nested) -->
