--- a/app/views/advancedMemberSearch.html
+++ b/app/views/advancedMemberSearch.html
@@ -72,8 +72,8 @@
 								<div class="col-lg-12 col-md-12 col-xs-12" align="center">
 									<button type="submit" class="btn btn-danger">Search</button>
 									<button type="reset" class="btn btn-danger">Reset</button>
-								<div>
-							<div>
+								</div>
+							</div>
 						</form>
 						<!--form ended-->
 					</div>
