focus feature implemented as generic method in common service class.

--- a/app/views/advancedMemberSearch.html
+++ b/app/views/advancedMemberSearch.html
@@ -85,7 +85,7 @@
 		</div>
       </div>
 	</div>
-	<div ng-if="gridOptions.data!=null">
+	<div id="grid">
 	    <ui-custom-grid ng-if="gridOptions.data.length>0" options="gridOptions"></ui-custom-grid>
 	</div>
 	<div ng-if="gridOptions.data==null" align="center">
