--- a/app/views/advancedMemberSearch.html
+++ b/app/views/advancedMemberSearch.html
@@ -85,10 +85,10 @@
 		</div>
       </div>
 	</div>
-	<div id="grid">
-	    <ui-custom-grid ng-if="gridOptions.data.length>0" options="gridOptions"></ui-custom-grid>
+	<div ng-if="gridOptions.data!=null && gridOptions.data.length>0">
+      <div ui-grid-grouping ui-grid="gridOptions" class="grid"></div>
 	</div>
 	<div ng-if="gridOptions.data==null" align="center">
-	    No Data Found.
+	      No Data Found.
 	</div>
 </div>
