--- a/app/views/advancedMemberSearch.html
+++ b/app/views/advancedMemberSearch.html
@@ -24,7 +24,7 @@
 						</div>
 						<form role="form" method="post" ng-submit="advanceSearch()">
 							<div class="row">
-									<div class="col-lg-6 col-md-6 col-xs-6">
+									<div class="col-lg-4 col-md-4 col-xs-4">
 										<div class="form-group">
 												<label>Name</label>
 												<input class="form-control" placeholder="Please Enter Name" name="name" ng-model="vm.formData.name">
@@ -37,17 +37,9 @@
 												<label>City</label>
 												<input class="form-control" placeholder="Please Enter City" name="city" ng-model="vm.formData.city">
 											</div>
-											<div class="form-group">
-												<label>Postcode</label>
-												<input class="form-control" placeholder="Please Enter Postcode" name="postcode" ng-model="vm.formData.postcode">
-											</div>
-											<div class="form-group">
-												<label>State</label>
-												<input class="form-control" placeholder="Please Enter State" name="state" ng-model="vm.formData.state">
-											</div>
 									</div>
 									<!-- /.col-lg-6 (nested) -->
-									<div class="col-lg-6 col-md-6 col-xs-6">
+									<div class="col-lg-4 col-md-4 col-xs-4">
 										<div class="form-group">
 											<label>Company</label>
 											<input class="form-control" placeholder="Please Enter Company" name="company" ng-model="vm.formData.company">
@@ -60,6 +52,18 @@
 											<label>Country</label>
 											<input class="form-control" placeholder="Please Enter Country" name="country" ng-model="vm.formData.country">
 										</div>
+									</div>
+									<!-- /.col-lg-6 (nested) -->
+									<!-- /.col-lg-6 (nested) -->
+									<div class="col-lg-4 col-md-4 col-xs-4">
+										<div class="form-group">
+											<label>Postcode</label>
+											<input class="form-control" placeholder="Please Enter Postcode" name="postcode" ng-model="vm.formData.postcode">
+										</div>
+											<div class="form-group">
+												<label>State</label>
+												<input class="form-control" placeholder="Please Enter State" name="state" ng-model="vm.formData.state">
+											</div>
 										<div class="form-group">
 											<label>Date Register</label>
 											<input class="form-control" placeholder="Please Enter Register Date" name="country" ng-model="vm.formData.created_date">
