--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -86,6 +86,13 @@ font-weight:bold;
 .grid {
   height: 250px;
 }
+
 .grid-bttn-align{
 	margin : 5px 6px 10px 9px;
+}
+
+.loading {
+    height:89px;
+    width:89px;
+    z-index: -1;
 }
