--- a/app/views/advancedMemberSearch.html
+++ b/app/views/advancedMemberSearch.html
@@ -66,7 +66,7 @@
 											</div>
 										<div class="form-group">
 											<label>Date Register</label>
-											<input type="datetime" class="form-control" date-time ng-model="vm.formData.dateRegister" view="date" format="YYYY-MM-DD" auto-close="true" watch-direct-changes="true">
+											<input type="text" class="form-control" date-time ng-model="vm.formData.created_date" min-view="date" view="date" format="YYYY-MM-DD" auto-close="true" watch-direct-changes="true">
 										</div>
 									</div>
 									<!-- /.col-lg-6 (nested) -->								
