transaction search implemented as well.

--- a/app/views/transactionSearch.html
+++ b/app/views/transactionSearch.html
@@ -59,8 +59,8 @@
 											    </select>
 											</div>
 										<div class="form-group">
-											<label>Date Register</label>
-											<input class="form-control" placeholder="Please Enter Register Date" name="country" ng-model="vm.formData.created_date">
+											<label>Promocode</label>
+											<input class="form-control" placeholder="Please Enter promocode" name="promocode" ng-model="vm.formData.promocode">
 										</div>
 									</div>
 									<!-- /.col-lg-6 (nested) -->								
