--- a/app/views/advancedMemberSearch.html
+++ b/app/views/advancedMemberSearch.html
@@ -90,8 +90,10 @@
       </div>
 	</div>
 	<image src="images/loading_spinner.gif" class="col-md-offset-5 loading" ng-if="dataLoading">	 
-	<div class="row" ng-if="gridOptions.data!=null && gridOptions.data.length>0">
-      <div ui-grid-grouping ui-grid="gridOptions" class="grid"></div>
+	<div class="row mtxl" ng-if="gridOptions.data!=null && gridOptions.data.length>0">
+      <div class="col-md-12 col-sm-12">
+      	<div ui-grid-grouping ui-grid="gridOptions" class="grid panel panel-default"></div>
+	  </div>	
 	</div>
 	<div class="row alert alert-info" ng-if="gridOptions && gridOptions.data==null" align="center">
 	      No Data Found.
