--- a/app/views/abandondcartlist.html
+++ b/app/views/abandondcartlist.html
@@ -21,10 +21,13 @@
         </select>
       </div>
 	</div>
-	<div ng-if="gridOptions.data!=null">
-      <div ui-grid-grouping ui-grid="gridOptions" class="grid"></div>
+  <image src="images/loading_spinner.gif" class="col-md-offset-5 loading" ng-if="dataLoading">   
+  <div class="row mtxl" ng-if="gridOptions.data!=null && gridOptions.data.length>0">
+      <div class="col-md-12 col-sm-12">
+        <div ui-grid-grouping ui-grid="gridOptions" class="grid panel panel-default"></div>
+    </div>  
   </div>
-  <div ng-if="gridOptions.data==null" align="center">
-      No Data Found.
+  <div class="row alert alert-info" ng-if="gridOptions && gridOptions.data==null && !dataLoading" align="center">
+        No Data Found.
   </div>
 </div>
