--- a/app/views/addCrmUser.html
+++ b/app/views/addCrmUser.html
@@ -8,27 +8,31 @@
 						<strong>Add CRM User</strong>
 					</div>
 					<div class="panel-body">
-						<form role="form" method="post" ng-submit="advanceSearch()">
+						<form role="form" name="crmMember" method="post" ng-submit="addCrmMember()">
 							<div class="row">
 									<div class="col-lg-4 col-md-4 col-xs-4">
 										<div class="form-group">
 												<label>First Name</label>
-												<input class="form-control" placeholder="Please Enter First Name" name="firstName" ng-model="vm.formData.firstName">
+												<input class="form-control" placeholder="Please Enter First Name" name="firstName" ng-model="vm.formData.firstname" type="text"  ng-blur="blur=true" required ng-class="{myBlur:blur}">
 											</div>
 											<div class="form-group">
 												<label>UserName</label>
-												<input class="form-control" placeholder="Please Enter UserName" name="userName" ng-model="vm.formData.userName">
+												<input class="form-control" placeholder="Please Enter UserName" name="userName" ng-model="vm.formData.username" type="text"  ng-blur="blur=true" required ng-class="{myBlur:blur}">
 											</div>
 									</div>
 									<!-- /.col-lg-6 (nested) -->
 									<div class="col-lg-4 col-md-4 col-xs-4">
 										<div class="form-group">
 											<label>Last Name</label>
-											<input class="form-control" placeholder="Please Enter Last Name" name="lastName" ng-model="vm.formData.lastName">
+											<input class="form-control" placeholder="Please Enter Last Name" name="lastName" ng-model="vm.formData.lastname"
+											type="text"  ng-blur="blur=true" required ng-class="{myBlur:blur}"
+											>
 										</div>										
 										<div class="form-group">
 											<label>Password</label>
-											<input class="form-control" placeholder="Please Enter Password" name="password" ng-model="vm.formData.password">
+											<input class="form-control" placeholder="Please Enter Password" name="password" ng-model="vm.formData.password"
+											type="password"  ng-blur="blur=true" required ng-class="{myBlur:blur}"
+											>
 										</div>
 									</div>
 									<!-- /.col-lg-6 (nested) -->
@@ -36,7 +40,9 @@
 									<div class="col-lg-4 col-md-4 col-xs-4">
 										<div class="form-group">
 											<label>Email ID</label>
-											<input class="form-control" placeholder="Please Enter Email ID" name="emailId" ng-model="vm.formData.emailId">
+											<input class="form-control" placeholder="Please Enter Email ID" name="emailId" ng-model="vm.formData.email"
+											type="text"  ng-blur="blur=true" required ng-class="{myBlur:blur}"
+											>
 										</div>
 									</div>
 									<!-- /.col-lg-6 (nested) -->								
@@ -44,7 +50,7 @@
 							<!-- /.row (nested) -->
 							<div class="row">
 								<div class="col-lg-12 col-md-12 col-xs-12" align="center">
-									<button type="submit" class="btn btn-danger">Add Member</button>
+									<button type="submit" class="btn btn-danger" ng-disabled="crmMember.$invalid || dataLoading">Add Member</button>
 									<button type="reset" class="btn btn-danger">Reset</button>
 								</div>
 							</div>
