added underscore and other libraries.

--- a/app/views/addCrmUser.html
+++ b/app/views/addCrmUser.html
@@ -41,7 +41,7 @@
 										<div class="form-group">
 											<label>Email ID</label>
 											<input class="form-control" placeholder="Please Enter Email ID" name="email" ng-model="vm.formData.email"
-											type="text"  ng-blur="email = commonService.checkElementLength(vm.formData,'email');" required ng-class="{myBlur:email}"
+											type="email"  ng-blur="email = commonService.checkElementLength(vm.formData,'email');" required ng-class="{myBlur:email}"
 											>
 										</div>
 									</div>
