--- a/app/views/addCrmUser.html
+++ b/app/views/addCrmUser.html
@@ -8,7 +8,7 @@
 						<strong>Add CRM User</strong>
 					</div>
 					<div class="panel-body">
-						<form role="form" name="crmMember" method="post" ng-submit="addCrmMember()">
+						<form role="form" name="crmMember" method="post" ng-submit="addUpdateCrmMember()">
 							<div class="row">
 									<div class="col-lg-4 col-md-4 col-xs-4">
 										<div class="form-group">
@@ -50,7 +50,7 @@
 							<!-- /.row (nested) -->
 							<div class="row">
 								<div class="col-lg-12 col-md-12 col-xs-12" align="center">
-									<button type="submit" class="btn btn-danger" ng-disabled="crmMember.$invalid || dataLoading">Add Member</button>
+									<button type="submit" class="btn btn-primary" ng-disabled="crmMember.$invalid || dataLoading">{{buttonText}}</button>
 									<button type="reset" class="btn btn-danger">Reset</button>
 								</div>
 							</div>
