updated transaction search controller , controller name advance search was overwritten there.

--- a/app/views/transactionSearch.html
+++ b/app/views/transactionSearch.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="AdvancedMemberSearchCtrl as vm">
+<div class="container-fluid" ng-controller="TransactionSearchCtrl as vm">
 	<div class="row mtxl">
       <div class="col-md-12 col-sm-12">
 		 <div class="row">
