--- a/app/styles/login-register.css
+++ b/app/styles/login-register.css
@@ -1,10 +1,10 @@
-a {
+.login-a {
   text-decoration: none;
   color: #1ab188;
   -webkit-transition: .5s ease;
   transition: .5s ease;
 }
-a:hover {
+.login-a:hover {
   color: #179b77;
 }
 
