--- a/app/views/searchClientInformation.html
+++ b/app/views/searchClientInformation.html
@@ -3,7 +3,7 @@
       <div class="col-md-12 col-sm-12">
 		 <div class="row">
 			<div class="col-lg-12">
-				<div class="panel panel-default">
+				<div class="panel panel-primary">
 					<div class="panel-heading">
 						<strong>Search Client Information</strong>
 					</div>
