CRM user,add,edit,delete feature from UI implemented.

--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -143,3 +143,32 @@ input[type="text"].sucess {          /*make myBlur class for text field for achi
   font-weight: bold;
   font-family: 'arial', 'sans-serif';
 }
+
+#operationMessage {
+    -moz-animation: cssAnimation 0s ease-in 5s forwards;
+    /* Firefox */
+    -webkit-animation: cssAnimation 0s ease-in 5s forwards;
+    /* Safari and Chrome */
+    -o-animation: cssAnimation 0s ease-in 5s forwards;
+    /* Opera */
+    animation: cssAnimation 0s ease-in 5s forwards;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    color:green;
+    text-align: center;
+}
+
+@keyframes cssAnimation {
+    to {
+        width:0;
+        height:0;
+        overflow:hidden;
+    }
+}
+@-webkit-keyframes cssAnimation {
+    to {
+        width:0;
+        height:0;
+        visibility:hidden;
+    }
+}
