--- a/app/views/addCrmUser.html
+++ b/app/views/addCrmUser.html
@@ -9,16 +9,19 @@
 					</div>
 					<div class="panel-body">
 						<form role="form" name="crmMember" method="post" ng-submit="addUpdateCrmMember()">
+							<div class="row" ng-if="crmMember.$error.usernameExists" align="center">
+								<div ng-if="crmMember.$error.usernameExists" class="col-lg-12 col-md-12 col-xs-12 alert alert-danger">Already exist</div>
+							</div>	
 							<div class="row">
 									<div class="col-lg-4 col-md-4 col-xs-4">
 										<div class="form-group">
 												<label>First Name</label>
 												<input class="form-control" placeholder="Please Enter First Name" name="firstname" ng-model="vm.formData.firstname" type="text"  ng-blur="firstName = commonService.checkElementLength(vm.formData,'firstname');" required ng-class="{myBlur:firstName}">
-											</div>
-											<div class="form-group">
-												<label>UserName</label>
-												<input class="form-control" placeholder="Please Enter UserName" name="username" ng-model="vm.formData.username" type="text"  ng-blur="username = commonService.checkElementLength(vm.formData,'username');" required ng-class="{myBlur:username}">
-											</div>
+										</div>
+										<div class="form-group">
+											<label>UserName</label>
+											<input class="form-control" placeholder="Please Enter UserName" name="username" ng-model="vm.formData.username" type="text"  ng-blur="username = commonService.checkElementLength(vm.formData,'username');" required ng-class="{myBlur:username}" username-email-available>
+										</div>
 									</div>
 									<!-- /.col-lg-6 (nested) -->
 									<div class="col-lg-4 col-md-4 col-xs-4">
@@ -42,7 +45,7 @@
 											<label>Email ID</label>
 											<input class="form-control" placeholder="Please Enter Email ID" name="email" ng-model="vm.formData.email"
 											type="email"  ng-blur="email = commonService.checkElementLength(vm.formData,'email');" required ng-class="{myBlur:email}"
-											>
+											username-email-available>
 										</div>
 									</div>
 									<!-- /.col-lg-6 (nested) -->								
