--- a/app/views/addCrmUser.html
+++ b/app/views/addCrmUser.html
@@ -53,7 +53,7 @@
 							<!-- /.row (nested) -->
 							<div class="row">
 								<div class="col-lg-12 col-md-12 col-xs-12" align="center">
-									<button type="submit" class="btn btn-primary" ng-disabled="crmMember.$invalid || dataLoading">{{buttonText}}</button>
+									<button type="submit" class="btn btn-primary" ng-disabled="crmMember.$invalid">{{buttonText}}</button>
 									<button type="button" class="btn btn-danger" ng-click="resetFormToAddUser()">Reset</button>
 								</div>
 							</div>
