--- a/app/views/transactionSearch.html
+++ b/app/views/transactionSearch.html
@@ -21,11 +21,7 @@
 										</div>
 										<div class="form-group">
 											<label>Country</label>
-											<select class="form-control">
-										      <option>All Countries</option>
-										      <option>U.S</option>
-										      <option>India</option>
-										    </select>
+											<countries></countries>
 										</div>
 									</div>
 									<!-- /.col-lg-6 (nested) -->
