--- a/app/views/advancedMemberSearch.html
+++ b/app/views/advancedMemberSearch.html
@@ -50,7 +50,7 @@
 										</div>
 										<div class="form-group">
 											<label>Country</label>
-											<input class="form-control" placeholder="Please Enter Country" name="country" ng-model="vm.formData.country">
+											<countries></countries>
 										</div>
 									</div>
 									<!-- /.col-lg-6 (nested) -->
