--- a/app/views/addCrmUser.html
+++ b/app/views/addCrmUser.html
@@ -33,7 +33,10 @@
 										</div>										
 										<div class="form-group">
 											<label>Password</label>
-											<input class="form-control" placeholder="Please Enter Password" name="password" ng-model="vm.formData.password"
+											<input ng-if="vm.formData.id" class="form-control" placeholder="Please Enter Password" name="password" ng-model="vm.formData.password"
+											type="password"
+											>
+											<input ng-if="!vm.formData.id" class="form-control" placeholder="Please Enter Password" name="password" ng-model="vm.formData.password"
 											type="password"  ng-blur="password = commonService.checkElementLength(vm.formData,'password');"" required ng-class="{myBlur:password}"
 											>
 										</div>
