download on behalf screen creation.

--- a/app/views/addCrmUser.html
+++ b/app/views/addCrmUser.html
@@ -9,9 +9,7 @@
 					</div>
 					<div class="panel-body">
 						<form role="form" name="crmMember" method="post" ng-submit="addUpdateCrmMember()">
-							<div class="row" ng-if="crmMember.$error.usernameExists" align="center">
-								<div ng-if="crmMember.$error.usernameExists" class="col-lg-12 col-md-12 col-xs-12 alert alert-danger">Already exist</div>
-							</div>	
+							<div ng-if="crmMember.$error.usernameExists" align="center" class="alert alert-danger">Already exist</div>	
 							<div class="row">
 									<div class="col-lg-4 col-md-4 col-xs-4">
 										<div class="form-group">
