--- a/app/views/downloadFacility.html
+++ b/app/views/downloadFacility.html
@@ -1,46 +1,43 @@
-<div class="container-fluid" ng-controller="PerformaInvoiceSearchCtrl as vm">
+<div class="container-fluid" ng-controller="DownloadFacilityCtrl as vm">
 	<div class="row mtxl">
       <div class="col-md-12 col-sm-12">
 		 <div class="row">
 			<div class="col-lg-12">
 				<div class="panel panel-primary">
 					<div class="panel-heading">
-						<strong>Performa Invoice Search</strong>
+						<strong>Download On Behalf</strong>
 					</div>
 					<div class="panel-body">
 						<form role="form" method="post" ng-submit="transactionSearch()">
+							<div class="alert alert-info">
+								<strong>
+									This feature is for you to place image/footage/audio into client's dowload center.Their credit(s)/download pack/subscription count will be consumed accordingly.
+								</strong>
+							</div>	
 							<div class="row">
 									<div class="col-lg-4 col-md-4 col-xs-4">
 										<div class="form-group">
-											<label>Date From</label>
-											<input type="text" class="form-control" date-time ng-model="vm.formData.fromDate" min-view="date" view="date" format="YYYY-MM-DD" auto-close="true" watch-direct-changes="true">
+											<label>UID</label>
+											<input type="text" class="form-control">
 										</div>
 									</div>
 									<!-- /.col-lg-6 (nested) -->
 									<div class="col-lg-4 col-md-4 col-xs-4">
 										<div class="form-group">
-											<label>Date To</label>
-											<input type="text" class="form-control" date-time ng-model="vm.formData.toDate" min-view="date" view="date" format="YYYY-MM-DD" auto-close="true" watch-direct-changes="true">
+											<label>1234 RFID#</label>
+											<input type="text" class="form-control">
 										</div>
 									</div>
 									<!-- /.col-lg-6 (nested) -->
 									<!-- /.col-lg-6 (nested) -->
 									<div class="col-lg-4 col-md-4 col-xs-4">
 										<div class="form-group">
-											<label>Status</label>
-												<select class="form-control">
-											      <option>All Countries</option>
-											      <option>U.S</option>
-											      <option>India</option>
-											    </select>
+											<div class="radio">
+			                                    <label>
+			                                        <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>Today
+			                                    </label>
+			                                </div>
 										</div>
-									</div>
-									<!-- /.col-lg-6 (nested) -->								
-							</div>
-							<div class="row">
-									<div class="col-lg-4 col-md-4 col-xs-4">
-										<label>Countries</label>
-										<countries></countries>
 									</div>
 									<!-- /.col-lg-6 (nested) -->								
 							</div>
