--- a/app/views/addCrmUser.html
+++ b/app/views/addCrmUser.html
@@ -98,7 +98,7 @@
       	<div ui-grid-grouping ui-grid="gridOptions" class="panel panel-primary grid"></div>
 	  </div>	
 	</div>
-	<div class="row alert alert-info" ng-if="gridOptions && gridOptions.data==null && !dataLoading" align="center">
-	      No Data Found.
+	<div class="row alert alert-info" ng-if="gridOptions && gridOptions.data.length==0" align="center">
+	    No Data Found.
 	</div>
 </div>
