--- a/app/views/lowRemaningCreditList.html
+++ b/app/views/lowRemaningCreditList.html
@@ -68,7 +68,7 @@
       	<div ui-grid-grouping ui-grid="gridOptions" class="grid panel panel-default"></div>
 	  </div>	
 	</div>
-	<div class="row alert alert-info" ng-if="gridOptions && gridOptions.data==null" align="center">
-	      No Data Found.
+	<div class="row alert alert-info" ng-if="gridOptions && gridOptions.data.length==0" align="center">
+	    No Data Found.
 	</div>
 </div>
