--- a/app/views/recentCancelledTransaction.html
+++ b/app/views/recentCancelledTransaction.html
@@ -6,7 +6,7 @@
   <div ng-if="vm.gridOptions && vm.gridOptions.data.length>0">
     <ui-custom-grid options="vm.gridOptions" class="grid"></ui-custom-grid>
   </div>
-  <div ng-if="vm.gridOptions && vm.gridOptions.data.length==0">
-      No Transactions details available.
+  <div class="row alert alert-info" ng-if="gridOptions && gridOptions.data.length==0" align="center">
+        No Data Found.
   </div>
 </div>
